--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <div class=header>
-    <h1>私のホームページだよやったあああああ</h1>
-    <div>考えたのはいいけど何も書くことが無い。</div>
+    <h1>私のホームページだよやったあ</h1>
+    <div>考えたけど何も書くことが無い。</div>
   </div>
   <div class=main>
     <div>
