--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>4b班38番 山中</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,7 +31,7 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。<br>
         2.感想<br>
         感想を自分で書く。<br>
       </div>
@@ -42,7 +42,7 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        蛙のような生き物が降ってきて、それにネコが触れると得点が入ります。蛙もどきは二体用意しており、降ってくるタイミングもランダムに設定しました。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
