--- a/rep01.html
+++ b/rep01.html
@@ -33,7 +33,7 @@
         1.内容<br>
         角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        曲がる角度を調整し綺麗な星に見えるようにしていくのが難しくもあり楽しかったです。<br>
       </div>
     </div>
 
@@ -44,7 +44,7 @@
         1.内容<br>
         蛙のような生き物が降ってきて、それにネコが触れると得点が入ります。蛙もどきは二体用意しており、降ってくるタイミングもランダムに設定しました。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        基本的なゲームの形は出来たので、ここからさらに自分で要素を足していき、よりよいものにしていきたいと思いました。<br>        
       </div>
     </div>
 
