--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,7 @@
       <img src="スクリーンショット(12)" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。<br>
+        角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。さあ諸君戦争をしよう<br>
         2.感想<br>
         曲がる角度を調整し綺麗な星に見えるようにしていくのが難しくもあり楽しかったです。<br>
       </div>
