--- a/rep01.html
+++ b/rep01.html
@@ -28,7 +28,7 @@
     <h2>第1週目</h2>
     <div>
       <h3>1-1 サイエンスアート</h3>
-      <img src="スクリーンショット(12)" alt="スクリーンショット(12)" width="50%" height="50%">
+      <img src="スクリーンショット(12).png" alt="スクリーンショット(12).png" width="50%" height="50%">
       <div>
         1.内容<br>
         角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。さあ諸君戦争をしよう<br>
