--- a/rep01.html
+++ b/rep01.html
@@ -39,7 +39,7 @@
 
     <div>
       <h3>1-2 ゲーム</h3>
-      <img src="スクリーンショット2023-10-04 104747.png" alt="ゲーム" width="50%" height="50%">
+      <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
         蛙のような生き物が降ってきて、それにネコが触れると得点が入ります。蛙もどきは二体用意しており、降ってくるタイミングもランダムに設定しました。<br>
