--- a/rep01.html
+++ b/rep01.html
@@ -31,9 +31,9 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。さあ諸君戦争をしよう<br>
+        角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。ネコは非表示にして星が見やすくなるよう工夫しました。。<br>
         2.感想<br>
-        曲がる角度を調整し綺麗な星に見えるようにしていくのが難しくもあり楽しかったです。<br>
+        曲がる角度を変え綺麗な星に見えるよう調整していくのが難しくもありましたが楽しかったです。もう少し数を増やし大きさを調整して、背景を変更するなどして、さらに改良を加えることが出来そうだと感じました。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        蛙のような生き物が降ってきて、それにネコが触れると得点が入ります。蛙もどきは二体用意しており、降ってくるタイミングもランダムに設定しました。<br>
+        蛙のような生き物が降ってきて、それにネコが触れると得点が入ります。蛙もどきは二体用意しており、降ってくるタイミングも乱数によってランダムに設定しました。また、ネコは少しずつ色が変わります。<br>
         2.感想<br>
-        基本的なゲームの形は出来たので、ここからさらに自分で要素を足していき、よりよいものにしていきたいと思いました。<br>        
+        基本的なゲームの形は出来たので、ここからさらに自分で要素を足していき、よりオリジナリティーのあるものにしていきたいと思いました。<br>        
       </div>
     </div>
 
@@ -54,9 +54,9 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://tukiha.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        githubを初めて使い、自分でホームページを作成しました。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        始めてみるような機能が多く、戸惑いもありましたが、うまく効果が反映されたときには満足感がありました。ホームページといえば「誰かによって作られているものを見る」といったイメージがあったのですが、それを今回自分自身で作ることで新たな視点による気づきもあり、非常にいい経験になりました。<br>        
       </div>      
     </div>
     
