--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,7 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。ネコは非表示にして星が見やすくなるよう工夫しました。。<br>
+        角度や色を調節し星形を描くプログラムを作成しました。また作成したものを複製して色の変化の割合や位置などを変え、二つの次々と色の変わる星が完成しました。ネコは非表示にして星が見やすくなるよう工夫しました。<br>
         2.感想<br>
         曲がる角度を変え綺麗な星に見えるよう調整していくのが難しくもありましたが楽しかったです。もう少し数を増やし大きさを調整して、背景を変更するなどして、さらに改良を加えることが出来そうだと感じました。<br>
       </div>
