--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>4b班38番 山中実愛</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -31,9 +31,9 @@
       <a href="https://yourID.github.io/web2023/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        前回使用したgithubを用い、ウェブサイトでレポートを作成しました。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        途中で画像の挿入部分を消してしまったため、第2回のレポートからその部分だけを見つけてコピー＆ペーストし元に戻してから画像を挿入しレポートを完成させました。その中でも画像を挿入する部分に当たりをつける作業が一番大変でした。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        TeachableMachineで画像を学習させグー、チョキ、パーを識別できるようにしました。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        より多くのサンプルを用意した方が正確な結果が出たので、どの位の数のサンプルから正しく識別することが出来るのかという点についても調べてみたいです。<br>        
       </div>
     </div>
     
@@ -53,15 +53,15 @@
       <img src="wroom.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Metaverse2でバーチャル空間内での会議等を体験しました。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        話題になっているMetaverseですが実際に使用するのは高専祭を除いては初めてだったので、とてもわくわくしました。実習が終わってからもどこかまだ現実ではないような、VR空間が残っているような感覚がありました。<br>
       </div>
     </div>
     
   </div>
   <div class=footer>
-    作成日：20YY年XX月XX日
+    作成日：2023年10月22日
   </div>
 </body>
 </html>
