--- a/rep02.html
+++ b/rep02.html
@@ -28,12 +28,12 @@
     <h2>第2週目</h2>
     <div>
       <h3>2-1 １週目のレポートをHTMLで作る</h3>
-      <a href="https://yourID.github.io/web2023/rep01.html">１週目のレポート</a><br>
+      <a href="https://tukiha.github.io/web2023/rep01">１週目のレポート</a><br>
       <div>
         1.内容<br>
         前回使用したgithubを用い、ウェブサイトでレポートを作成しました。<br>
         2.感想<br>
-        途中で画像の挿入部分を消してしまったため、第2回のレポートからその部分だけを見つけてコピー＆ペーストし元に戻してから画像を挿入しレポートを完成させました。その中でも画像を挿入する部分に当たりをつける作業が一番大変でした。<br>
+        途中で画像の挿入部分やリンク作成の箇所を消してしまったため、第2回のレポートからその部分だけを見つけてコピー＆ペーストし元に戻してからそれらを挿入しレポートを完成させました。その中でもリンクを張る部分に当たりをつけ必要な箇所だけを抜き出す作業が一番大変でした。<br>
       </div>
     </div>
 
