--- a/rep03.html
+++ b/rep03.html
@@ -39,7 +39,7 @@
     <div>
       <h3>3-2 JavaScript体験：伝言プログラムを作る</h3>
       <img src="dengon.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="WebDOJO.1697957626755">伝言板</a><br>                                   
+      <a href="https://code4fukui.github.io/htmlprac/">伝言板</a><br>                                   
       <div>
         1.内容<br>
         多様編集貪欲非対称であり対称的な調和開拓縁つまり曼荼羅<br>
