--- a/rep03.html
+++ b/rep03.html
@@ -42,7 +42,7 @@
       <a href="https://code4fukui.github.io/htmlprac/">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        多様編集貪欲非対称であり対称的な調和開拓縁つまり曼荼羅<br>
+        多様編集貪欲非対称であり対称的な調和開拓縁つまり曼荼羅ぁ<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
