--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,9 @@
       <a href="https://yourID.github.io/web2023/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Webプログラミング道場を使用し、3D空間のオブジェクトの色を変えたり移動させたりしました。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        <br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://code4fukui.github.io/htmlprac/">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        多様編集貪欲非対称であり対称的な調和開拓縁つまり曼荼羅ぁ<br>
+        同じくWedプログラミング道場で、伝言板のプログラムを作成しました。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        途中一度誤ってプログラムの殆どを削除してしまい、すべて作り直す作業が一番大変でした。<br>
       </div>
     </div>
 
@@ -53,27 +53,27 @@
       <img src="interactive.png" alt="JavaScript" width="20%" height="20%"><br>      
       <div>
         1.内容<br>
-        ないようないよう<br>
+        前回も使用したMetaverse2で先生の作成したVR空間を体験しました。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        特に気になった白いボールを出すプログラムについて詳しく知りたいと感じました。Metaverseを使ったプログラムは様々なことに活用できそうなので、機会があればいろいろと試してみたいです。<br>
       </div>
     </div>
   
   <div class=2week>
     <h2>第2週目のレポート</h2>
       <div>
-        <a href="https://yourID.github.io/web2023/rep02.html">2週目のレポート</a><br>
+        <a href="https://tukiha.github.io/web2023/rep02">2週目のレポート</a><br>
       </div>
   </div>
   <div class=1week>
     <h2>第1週目のレポート</h2>
       <div>
-        <a href="https://yourID.github.io/web2023/rep01.html">1週目のレポート</a><br>
+        <a href="https://tukiha.github.io/web2023/rep01">1週目のレポート</a><br>
       </div>
   </div>
                                                              
   <div class=footer>
-    作成日：20YY年MM月DD日
+    作成日：2023年10月22日
   </div>
 </body>
 </html>
