--- a/rep03.html
+++ b/rep03.html
@@ -28,7 +28,7 @@
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
       <img src="vr.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https:///:/Users/minOMandara/Downloads/VR.html">自作した３次元空間</a><br>                                   
+      <a href="VR.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
         Webプログラミング道場を使用し、3D空間のオブジェクトの色を変えたり移動させたりしました。<br>
