--- a/rep03.html
+++ b/rep03.html
@@ -33,7 +33,7 @@
         1.内容<br>
         Webプログラミング道場を使用し、3D空間のオブジェクトの色を変えたり移動させたりしました。<br>
         2.感想<br>
-        <br>
+        一見2D空間のようなのに、実際は奥行きのある3D空間なのがなんだか不思議でした。どれがどのオブジェクトを表すのか模索しながら動かすのが楽しかったです。<br>
       </div>
     </div>
     <div>
